--- a/src/FilterButton.css
+++ b/src/FilterButton.css
@@ -35,6 +35,7 @@
   display: flex; /* Make the container a flex container */
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
+  color: white; 
 }
 
 .charFilterContainer {
