--- a/src/NowPlaying.css
+++ b/src/NowPlaying.css
@@ -1,7 +1,16 @@
+.nowPlayingRow {
+  display:flex;
+  flex-direction: row;
+  justify-items:stretch;
+  min-height: 160px;
+  align-items: flex-start;
+}
 
-.drh-set-row-1 {
+
+
+.nowPlaying-set-row-1 {
   border-radius: 10px;
-  background-color: #202020;
+  background-color: var(bg-20);
   padding: 16px;
   padding-bottom: 6px;
   margin: 8px;
@@ -17,43 +26,25 @@
 
 
 @media (hover: hover) and (pointer: fine) {
-  .drh-set-row-1:hover {
-    background-color: rgb(40, 40, 40);
+  .nowPlaying-set-row-1:hover {
+    background-color: var(--bg-hover);
     transform: scale(1.02);
   }
 }
 
 
-.drh-set-row-1:active {
-  background-color: #282828;
+.nowPlaying-set-row-1:active {
+  background-color: rgb(40, 40, 40);
 }
 
-.drh-set-row-1-selected {
-  background-color: #1d1d1d;
+.nowPlaying-set-row-1-selected {
+  background-color: rgb(29, 29, 29);
   border: 3px solid  lightgreen;
 }
 
-.drh-under-icon-link {
-  width: 40px;
-  height: 40px;
-  flex-grow: 0l;
-  margin-right: 6px;
-}
-
-.drh-under-icon {
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  /* margin-right: 6px; */
-  /* margin-left: 0px; */
-  flex-grow: 0l
-  /* padding-top: 6px;
-  display:flex;
-  flex-direction: row; */
-}
-.drh-under-row {
+.nowPlaying-under-row {
   padding: 8px;
-  padding-top: 6px;
+  padding-top: 2px;
   display:flex;
   flex-direction: row;
   justify-items: flex-start;
@@ -62,20 +53,7 @@
   text-align: start;
 }
 
-.drh-under-info {
-  /* padding: 8px;
-  padding-left: 6px; */
-  display:flex;
-  flex-direction: column;
-  align-items: flex-start;
-  align-content: flex-start;
-  justify-content: center;
-  justify-items: center;
-  font-size: 14px;
-  text-align: start;
-}
-
-/* .drh-under-info {
+.nowPlaying-under-info {
   padding: 8px;
   padding-left: 6px;
   display:flex;
@@ -84,13 +62,28 @@
   align-content: flex-start;
   font-size: 14px;
   text-align: start;
-} */
+}
+
+.nowPlaying-under-icon-link {
+  /* width: 40px;
+  height: 40px; */
+}
 
 
-.drh-under-1 {
+.nowPlaying-under-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  margin: 6px;
+  margin-left: 0px;
+  /* padding-top: 6px;
+  display:flex;
+  flex-direction: row; */
+}
+
+.nowPlaying-under-1 {
   padding: 8px;
-  padding-top: 4px;
-  margin-bottom: 6px;
+  padding-top: 6px;
   display:flex;
   flex-direction: column;
   align-items: flex-start;
@@ -99,41 +92,52 @@
   text-align: start;
 }
 
-.drh-under-row-2 {
-  /* padding: 8px;
-  padding-top: 6px; */
-  margin-top: 8px;
+.nowPlaying-other-under-row {
   display:flex;
   flex-direction: row;
   justify-items: flex-start;
   justify-content: flex-start;
-  align-items: center;
-  align-content: center;
+}
+
+.nowPlaying-other-under-info {
+  padding: 8px;
+  padding-left: 6px;
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: flex-start;
   font-size: 14px;
   text-align: start;
 }
 
-.drh-charemoji {
-  height: 22px;
-  width: 22px;
-  margin-right: -6px;
+
+.nowPlaying-under-1 {
+  padding: 8px;
+  padding-top: 6px;
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: flex-start;
+  font-size: 14px;
+  text-align: start;
 }
 
-.drh-charemojimatches {
+.nowPlaying-charemoji {
   height: 22px;
   width: 22px;
-  /* margin-left: -6px; */
-  margin-right: -6px;
+}
+
+.nowPlaying-charemojimatches {
+  height: 22px;
+  width: 22px;
   background-image: radial-gradient(#aaffff88, #aaffff00 200%);
   box-shadow: 0px 0px 30px 2px rgb(170 255 255 / 0.8);
 }
-.drh-schuemoji {
+.nowPlaying-schuemoji {
   height: 22px;
   width: 22px;
-  /* margin-left: -6px; */
-  margin-right: -6px;
 }
-.drh-playerName {
+.nowPlaying-playerName {
   color: var(--text-main-color);
   font-size: 14px;
   line-height: 1.0;
@@ -143,13 +147,13 @@
   display: inline-block;
   /* text-shadow: 2px 2px 2px #000000; */
 }
-.drh-playerName:hover {
+.nowPlaying-playerName:hover {
   /* font-weight: 900; */
   color: var(--text-color-hover);
   transform: scale(1.05);
 }
 
-.drh-vsText {
+.nowPlaying-vsText {
   color: var(--text-main-color);
   font-size:small;
   line-height: 1.0;
@@ -161,7 +165,7 @@
 
 }
 
-.drh-tourneyText {
+.nowPlaying-tourneyText {
   color: var(--text-main-color);
   /* font-size:x-small; */
   line-height: 1.0;
@@ -169,16 +173,16 @@
   word-break: break-all;
 }
 
-.drh-roundText {
+.nowPlaying-roundText {
   color: var(--text-main-color);
   /* font-size:x-small; */
-  line-height: 1.2;
+  line-height: 1.9;
   font-weight: 400;
   word-break: break-all;
 }
 
 
-/* .drh-viewersText {
+/* .nowPlaying-viewersText {
   color: var(--text-main-color);
   font-size:medium;
   line-height: 1.0;
@@ -186,24 +190,21 @@
   word-break: break-all;
 } */
 
-.drh-viewersText {
+.nowPlaying-viewersText {
   color: var(--text-main-color);
   width: fit-content;
   font-size: small;
   position: absolute;
   justify-self: end;
-  left:0px;
-  bottom:0px;
+  left:2px;
+  bottom:1px;
   padding: 2px;
-  padding-bottom:3px;
-  padding-left: 4px;
-  border-bottom-left-radius: 6px;
-  background:var(--bg-over-image-walpha);
+  background:#00000077;
   /* margin-bottom: 12px; */
-  /* -webkit-text-stroke-width: 1.5px;
-  -webkit-text-stroke-color: var(--text-main-color-shadow);
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: black;
   paint-order: stroke fill;
-  text-shadow: 1.2px 1.2px 1.2px var(--text-main-color-shadow); */
+  text-shadow: 1.2px 1.2px 1.2px #000000;
   /* margin-right: -8px;
   margin-top: -12px; */
   /* top: calc(end - 50px); */
@@ -217,51 +218,46 @@
   align-self: flex-start;
 }
 
-.drh-locationText {
+.nowPlaying-locationText {
   color: var(--text-main-color);
   width: fit-content;
   font-size: 12px;
   position: absolute;
-  bottom: 0px;
-  right: 0px;
-  padding-bottom: 1px;
-  padding-right: 1px;
-  border-bottom-right-radius: 6px;
-  background:var(--bg-over-image-walpha);
+  bottom:1px;
+  right:1px;
+  background:#00000077;
   padding: 2px;
   align-self: flex-end;
   justify-self: end;
-  /* -webkit-text-stroke-width: 1.5px;
-  -webkit-text-stroke-color: var(--text-main-color-shadow);
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: black;
   paint-order: stroke fill;
-  text-shadow: 1.2px 1.2px 1.2px var(--text-main-color-shadow); */
+  text-shadow: 1.2px 1.2px 1.2px #000000;
   /* margin-right: -8px;
   margin-top: -12px; */
   z-index: 2;
 }
 
-.drh-tourneyTitle {
+.nowPlaying-tourneyTitle {
   color: var(--text-main-color);
   font-size:14px; 
   line-height: 1.1;
   font-weight: 800;
-  text-decoration: none !important;
   overflow-wrap: break-word;
   /* word-break: break-all; */
 }
 
-.drh-streamNameText {
+.nowPlaying-streamNameText {
   color: var(--text-main-color-subdue-3);
   font-size:14px;
   padding-top: 4px;
   line-height: 1.1;
   font-weight: 400;
-  text-decoration: none;
   overflow-wrap: break-word;
 }
 
 
-.drh-tourney-background-image {
+.nowPlaying-tourney-background-image {
  background:
   /* top, transparent black, faked with gradient */ 
   linear-gradient(
@@ -271,7 +267,7 @@
   /* bottom, image */
   url(https://images.unsplash.com/photo-1614030424754-24d0eebd46b2);
 }
-.drh-tourney-icon {
+.nowPlaying-tourney-icon {
   height: 40px;
   width: 40px;
   position: absolute;
@@ -282,7 +278,7 @@
   align-self: flex-start;
 }
 
-.drh-tourney-icon-no-rad {
+.nowPlaying-tourney-icon-no-rad {
   height: 40px;
   width: 40px;
   position: absolute;
@@ -290,24 +286,21 @@
   margin-top: -17px;
 }
 
-.drh-tourney-timestamp {
+.nowPlaying-tourney-timestamp {
   width: fit-content;
   font-size: small;
   position: absolute;
   align-self: flex-end;
-  background:var(--bg-over-image-walpha);
+  background:#00000077;
   padding: 1px;
-  padding-right:3px;
-  padding-top: 2px;
-  border-top-right-radius: 6px;
-  /* -webkit-text-stroke-width: 1.5px;
-  -webkit-text-stroke-color: var(--text-main-color-shadow);
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: black;
   paint-order: stroke fill;
-  text-shadow: 1.2px 1.2px 1.2px var(--text-main-color-shadow); */
+  text-shadow: 1.2px 1.2px 1.2px #000000;
   /* margin-right: -8px;
   margin-top: -12px; */
-  right: 0px;
-  top: 0px;
+  right: 3px;
+  top: 2px;
   z-index: 2;
   text-align: center;
   vertical-align: center;
@@ -317,10 +310,10 @@
   flex-direction: row; 
 }
 
-.drh-t1-stamp {
+.nowPlaying-t1-stamp {
   align-self: center;
 }
-.drh-live-text {
+.nowPlaying-live-text {
   align-self: center;
   font-size: x-small;
   padding-left: 8px;
@@ -328,7 +321,7 @@
   /* letter-spacing: -1px; */
 }
 
-.drh-set-row-2 {
+.nowPlaying-set-row-2 {
   color: var(--text-main-color);
   width:100%;
   /* margin-top: 20px; */
@@ -344,28 +337,26 @@
   /* margin-left: 100px; */
 }
 
-.drh-title-margin {
+.nowPlaying-title-margin {
   margin-left: 0px;
   margin-right: 0px;
-  text-decoration: none;
-  /* color: var(--text-main-color); */
 
   /* margin-left: 28px;
   margin-right: 28px; */
 }
 
-.drh-set-row-5 {
+.nowPlaying-set-row-5 {
   /* align-self: stretch; */
   /* position: relative; */
   z-index: 4;
   /* margin-left: 100px; */
 }
 
-.drh-set-row-matches {
+.nowPlaying-set-row-matches {
   box-shadow: 0px 0px 4px 2px rgb(170 255 255 / 0.8);
 }
 
-.drh-set-row-4 {
+.nowPlaying-set-row-4 {
   display: flex;
   flex-direction: row;
   align-items: end;
@@ -377,7 +368,7 @@
   /* margin-bottom: 8px; */
 }
 
-.drh-textGlow {
+.nowPlaying-textGlow {
   /* text-shadow : horizontal-shadow vertical-shadow blur #aaffff88; */
   /* background-color: #aaffffaa; */
   background-image: radial-gradient(#aaffff88, #aaffff00 200%);
@@ -386,41 +377,41 @@
 
 }
 
-.drh-bracketLink {
+.nowPlaying-bracketLink {
   font-size:small;
   line-height: 1.2;
-  color: var(--text-color-hover);
+  color: var(--text-main-color);
   text-wrap: wrap;
   word-break: break-all;
   display: inline-block;
 }
 
-.drh-bracketLink:hover {
+.nowPlaying-bracketLink:hover {
   /* font-weight: bolder; */
   color: var(--text-color-hover);
   transform: scale(1.05);
 }
 
-.drh-bracketLink:active {
+.nowPlaying-bracketLink:active {
   color: rgb(0, 49, 0);
   font-weight: bolder;
   color: var(--text-color-hover);
 }
 
-.drh-icons-row {
+.nowPlaying-icons-row {
   flex-direction: row;
   display: flex;
   justify-self: center;
 }
 
-.drh-icons-row-icon {
+.nowPlaying-icons-row-icon {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 16px;
   padding-bottom: 16px;
 }
 
-.drh-icons-row-icon-stream {
+.nowPlaying-icons-row-icon-stream {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 15px;
