--- a/src/Feedback.css
+++ b/src/Feedback.css
@@ -16,6 +16,7 @@
   font-stretch: condensed;
   background-color: var(--text-shadow-color);
   -webkit-user-select: none; /* Safari */
+  -moz-user-select: none;    /* Firefox */
   -ms-user-select: none;    /* IE 10 and IE 11 */
   user-select: none;        /* Standard syntax */
 }
