--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,10 @@
 .about-header {
   /* background-color: #282c34; */
   background-color: var(--bg-main);
-  min-height: calc(100vh - 50px);
+  /* height:10px; */
+  /* min-height:auto; */
+  height: calc(100dvh - 52px);
+  min-height: calc(100dvh - 50px);
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -12,6 +15,9 @@
   padding-right: 24px;
   padding-top: 24px;
   line-height: 24px;
+  overflow-y: scroll;
+  flex-grow: 1;
+  overscroll-behavior-y: none;
 }
 
 .about-heading1 {
