--- a/src/RewindSetButton.css
+++ b/src/RewindSetButton.css
@@ -35,7 +35,8 @@
 
 .rewindStartHolder {
   position: absolute;
-  width:100%;
+  left: 0px;
+  width: calc(100% - 40px);
   height:40px;
   background-color: rgb(from var(--bg-main) r g b / 0.64);
 }
