--- a/src/NowPlaying.css
+++ b/src/NowPlaying.css
@@ -4,6 +4,7 @@
   justify-items:stretch;
   min-height: 160px;
   align-items: flex-start;
+  position:relative;
 }
 
 
@@ -183,15 +184,6 @@
   font-weight: 400;
   word-break: break-all;
 }
-
-
-/* .nowPlaying-viewersText {
-  color: var(--text-main-color);
-  font-size:medium;
-  line-height: 1.0;
-  font-weight: bold;
-  word-break: break-all;
-} */
 
 .nowPlaying-viewersText {
   color: var(--text-main-color);
@@ -383,7 +375,7 @@
 
 .nowPlaying-bracketLink {
   font-size:small;
-  line-height: 1.2;
+  /* line-height: 1.2; */
   color: var(--text-main-color);
   text-wrap: wrap;
   word-break: break-all;
@@ -420,4 +412,134 @@
   padding-right: 10px;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.nowPlaying-segment2 {
+  position: relative;
+  background-color: var(--bg-controls);
+  border-radius: 12px;
+  padding-left: 28px;
+  padding-right: 28px;
+  padding-top: 16px;
+  padding-bottom: 8px;
+  margin: 16px;
+  /* height: 100%; */
+  height: 104px;
+  display: flex;
+  flex-direction: column;
+}
+
+.nowPlaying-segment2-row1 {
+  display: flex;
+  flex-direction: row;
+}
+
+.nowPlaying-segment2-viewersText {
+  color: var(--text-main-color);
+  font-size:medium;
+  line-height: 1.0;
+  font-weight: bold;
+  word-break: break-all;
+}
+
+.nowPlaying-segment2-locationText {
+  color: var(--text-main-color);
+  width: fit-content;
+  font-size: 12px;
+  margin-left: 10px;
+  /* z-index: 2; */
+}
+
+.nowPlaying-segment2-tourney-timestamp {
+  width: fit-content;
+  font-size: small;
+  margin-left: 10px;
+  /* font-size: 12px; */
+  text-align: center;
+  vertical-align: center;
+  justify-content: center;
+  justify-items: center;
+  display:flex;
+  flex-direction: row; 
+}
+
+.nowPlaying-scoreText {
+  color: var(--text-main-color);
+  width: fit-content;
+  font-size: 16px;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  padding-bottom: 3px;
+  padding-top: 3px;
+  border-bottom-right-radius: 6px;
+  background:var(--bg-over-image-walpha);
+  align-self: flex-end;
+  justify-self: end;
+  z-index: 2;
+}
+
+.nowPlaying-scoreText-green {
+  background-color: #90ee907d;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-bottom: 3px;
+  padding-top: 3px;
+
+}
+.nowPlaying-scoreText-normal {
+  /* background-color: #90ee907d; */
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-bottom: 3px;
+  padding-top: 3px;
+}
+.nowPlaying-scoreLast {
+  border-bottom-right-radius: 6px;
+}
+
+.nowPlaying-bracketButton {
+  position: absolute;
+  bottom: 4px;
+  left: 4px;
+  background-color: var(--bg-main);
+  height: 42px;
+  width: 42px;
+  border-radius:4px;
+  border-bottom-left-radius: 8px;
+  /* display: inline-block; */
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .nowPlaying-bracketButton :hover {
+    /* transform: scale(1.05); */
+    opacity: 0.86;
+    /* background-color: #ffffff22; */
+  }
+}
+
+.nowPlaying-streamButton {
+  color: var(--text-main-color);
+  background-color: var(--bg-main);
+  border-radius: 12px;
+  font-size: small;
+  font-weight: medium;
+  padding: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
+  width: fit-content;
+  align-self: center;
+  text-align: center;
+  margin-top: 6px;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .nowPlaying-streamButton :hover {
+    opacity: 0.86;
+    transform: scale(1.05);
+  }
+}
+
+.nowPlaying-streamButton:active {
+  opacity: 0.86;
 }
