--- a/src/Home2.css
+++ b/src/Home2.css
@@ -76,7 +76,8 @@
   right: 0;
   width: 100vw;
   height: 100dvh;
-  z-index: 210;
+  /* z-index: 210; */
+  z-index: 100000;
   display: flex;
   flex-direction: column;
 }
